--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "huellitasencasa",
-  "version": "1.0.0",
-  "description": "Somos una organización comprometida con encontrar hogares amorosos y responsables para gatitos y perritos abandonados o sin hogar. Este proyecto forma parte del Trabajo Integrador Final del curso de Full Stack Developer de Formar.",
-  "main": "app.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "nodemon": "^3.1.7",
-    "path": "^0.12.7"
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
   }
 }
