--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "start": "node ./src/bin/www",
     "dev": "nodemon ./src/bin/www",
-    "db-init" : "sequelize db:create && sequelize db:migrate",
-    "db-reset" : "sequelize db:drop && sequelize db:create && sequelize db:migrate && sequelize db:seed:all"
+    "db-init": "sequelize db:create && sequelize db:migrate && sequelize db:seed:all",
+    "db-reset": "sequelize db:drop && sequelize db:create && sequelize db:migrate && sequelize db:seed:all"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
