--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.14.1",
+    "type": "module",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
