--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.14.1",
-    "type": "module",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "type": "module"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
