--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^7.2.1",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.14.1",
